--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "hono-app",
+	"version": "1.0.0",
 	"scripts": {
 		"dev": "bun run --hot src/index.ts",
 		"start": "NODE_ENV=production bun src/index.ts",
@@ -10,17 +11,17 @@
 	},
 	"dependencies": {
 		"@hono/zod-openapi": "^1.0.0-beta.1",
-		"@scalar/hono-api-reference": "^0.9.6",
+		"@scalar/hono-api-reference": "^0.9.7",
 		"drizzle-orm": "^0.44.2",
 		"drizzle-seed": "^0.3.1",
 		"drizzle-zod": "^0.8.2",
-		"hono": "^4.8.2",
-		"pg": "^8.16.2",
+		"hono": "^4.8.3",
+		"pg": "^8.16.3",
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/bun": "latest",
-		"drizzle-kit": "^0.31.2"
+		"drizzle-kit": "^0.31.4"
 	}
 }
