--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"version": "1.0.0",
 	"scripts": {
 		"dev": "bun run --hot src/index.ts",
-		"start": "NODE_ENV=production bun src/index.ts",
-		"db:p": "bun --bun drizzle-kit push",
-		"db:g": "bun --bun drizzle-kit generate",
-		"db:m": "bun --bun drizzle-kit migrate",
+		"start": "bun --env-file=./.env.production src/index.ts",
+		"db:p": "bun drizzle-kit push",
+		"db:g": "bun drizzle-kit generate",
+		"db:m": "bun drizzle-kit migrate",
 		"db:s": "bun src/db/seed/index.ts"
 	},
 	"dependencies": {
@@ -16,12 +16,15 @@
 		"drizzle-seed": "^0.3.1",
 		"drizzle-zod": "^0.8.2",
 		"hono": "^4.8.3",
+		"hono-pino": "^0.9.1",
 		"pg": "^8.16.3",
+		"pino": "^9.7.0",
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/bun": "latest",
-		"drizzle-kit": "^0.31.4"
+		"drizzle-kit": "^0.31.4",
+		"pino-pretty": "^13.0.0"
 	}
 }
